--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -177,7 +177,71 @@ body {
  
  }
 
+ /* FEATURES SECTION */
+ 
+ .features {
+
+  margin-top: 100px;
+
+ }
+
+ .features p {
+
+    color: #7d7d7d;
+    margin-bottom: 25px;
+ }
+
+
+ .tabs-section label { 
+
+  font-size: 20px;
+  color: #7d7d7d;
+
+ }
+
+ input[type="radio"] { 
+
+  display: none;
+ }
+
+ .tab-content { 
+
+  display: none;
+  margin-top: 3rem;
+ }
+
+ input[type="radio"]:checked + label {
+
+  border-bottom: 3px solid orange;
+  color: #252B46;
+  padding-bottom: 7px;
+
+ }
+
+ #simpleBookmarking:checked~#firstOptionContent,
+ #speedySearching:checked~#content-speedy, 
+ #easySharing:checked~#content-easy { 
+
+   display: block;
+ }
+
+ .tab-content img { 
+
+  width: 400px;
+    height: auto;
+ }
+
+ .tab-content h3 { 
+
+   font-size: 25px;
+   
+ }
+
+ 
 
 }
 
-@media (min-width: 1024px) {}
+@media (min-width: 1024px) {
+
+
+}
