--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -12,6 +12,7 @@ body {
 
     color: #7d7d7d;
   }
+
   /* HEADER MENU*/
   header {
     display: flex;
@@ -25,8 +26,8 @@ body {
   }
 
   .logo img {
-    width: 150px;
-    height: 25px;
+    width: 200px;
+    height: auto;
 
 
   }
@@ -96,6 +97,8 @@ body {
     border: none;
     font-weight: 100;
     background-color: #7d7d7d;
+    margin-top: 15px;
+    margin-bottom: 15px;
 
   }
 
@@ -210,13 +213,14 @@ body {
 
     display: none;
     margin-top: 3rem;
+
   }
 
   input[type="radio"]:checked+label {
 
     border-bottom: 3px solid orange;
     color: #252B46;
-    padding-bottom: 7px;
+    padding-bottom: 14px;
 
   }
 
@@ -244,7 +248,7 @@ body {
     margin-top: 7rem;
   }
 
-  
+
 
   .card {
 
@@ -258,26 +262,65 @@ body {
     margin-bottom: 2rem;
   }
 
-.card-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
+  .card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
 
 
 
-.card button { 
+  .card button {
 
-  border-radius: 5px;
-  border: none;
-  padding: 15px 40px 15px 40px;
-  margin-top: 1rem;
-  color: white;
-  background-color: rgb(97, 100, 255);
+    border-radius: 5px;
+    border: none;
+    padding: 15px 40px 15px 40px;
+    margin-top: 1rem;
+    color: white;
+    background-color: rgb(97, 100, 255);
 
-}
+  }
+
+  /*FAQs QUESTIONS SECTION */
+
+  .asked-questions-title {
+    margin-top: 4rem;
+
+  }
+
+  .questions-container {
+
+    max-width: 350px;
+    width: 100%;
+    margin: 30px auto;
+    text-align: left;
+    
+
+  }
+
+  .more-info-btn {
+
+    display: inline-block;
+    background: #4b5eff;
+    color: white;
+    padding: 15px 20px 15px 20px;
+    border: none;
+    border-radius: 8px;
+    font-size: 15px;
+    text-decoration: none;
+    text-align: center;
+    margin-top: 1rem;
+    margin-left: 7rem;
+    
+    
+
+
+  }
+
+
+
 
 }
 
