--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -319,6 +319,46 @@ body {
 
   }
 
+ /* SIGN UP SECTION */
+
+ .sign-up-section { 
+
+  display: flex;
+  flex-direction: column;
+  margin-top: 5rem;
+  background-color: #4b5eff;
+  color: white;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+ }
+
+ .sign-up-section p { 
+  color: white;
+ }
+
+ .sign-up-section button {
+
+  margin-top: 1rem;
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  background-color: rgb(253, 69, 28);
+  color:#ffffff;
+  width: 75%;
+  font-weight: bold;
+  
+ }
+
+ .sign-up-section input { 
+  
+  width: 70%;
+  padding: 10px;
+  border-radius: 4px;
+  border: none;
+ }
+
+
+
 
 
 
