--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -139,7 +139,7 @@ body {
 
   }
 
-  .first-feature img {
+  .hero-section img {
 
     margin-top: 50px;
     width: 450px;
@@ -296,7 +296,7 @@ body {
     width: 100%;
     margin: 30px auto;
     text-align: left;
-    
+
 
   }
 
@@ -313,55 +313,106 @@ body {
     text-align: center;
     margin-top: 1rem;
     margin-left: 7rem;
-    
-    
+
+
 
 
   }
 
- /* SIGN UP SECTION */
+  /* SIGN UP SECTION */
 
- .sign-up-section { 
+  .sign-up-section {
 
-  display: flex;
-  flex-direction: column;
-  margin-top: 5rem;
-  background-color: #4b5eff;
-  color: white;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
- }
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+    background-color: #4b5eff;
+    color: white;
+    padding-top: 2rem;
+    padding-bottom: 4rem;
+  }
 
- .sign-up-section p { 
-  color: white;
- }
+  .sign-up-section p {
+    color: white;
+  }
 
- .sign-up-section button {
+  .sign-up-section button {
 
-  margin-top: 1rem;
-  border: none;
-  border-radius: 4px;
-  padding: 10px;
-  background-color: rgb(253, 69, 28);
-  color:#ffffff;
-  width: 75%;
-  font-weight: bold;
-  
- }
+    margin-top: 1rem;
+    border: none;
+    border-radius: 4px;
+    padding: 10px;
+    background-color: rgb(253, 69, 28);
+    color: #ffffff;
+    width: 75%;
+    font-weight: bold;
 
- .sign-up-section input { 
-  
-  width: 70%;
-  padding: 10px;
-  border-radius: 4px;
-  border: none;
- }
+  }
+
+  .sign-up-section input {
+
+    width: 70%;
+    padding: 10px;
+    border-radius: 4px;
+    border: none;
+  }
 
 
+  /* FOOTER */
+
+  footer {
+
+    background-color: #33323d;
+    color: white;
+    padding-bottom: 3rem;
+
+  }
+
+  .links {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+
+  }
+
+  .links img {
+
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    width: 200px;
+    height: auto;
+    color: #ffffff;
+    filter: brightness(0) invert(1);
+
+
+  }
+
+
+  .image-links {
+
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+
+
+  }
 
 
 
 
 }
 
-@media (min-width: 1024px) {}
+/* DESKTOP STYLES*/
+
+@media (min-width: 1024px) {
+
+
+  .menu-icon,
+  #menu-toggle,
+  header nav {
+    display: none !important;
+  }
+}
