--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -861,6 +861,14 @@ body {
     text-align: left;
   }
 
+   .questions-container p {
+    margin-top: 0.8rem;
+    max-width: 550px;
+    width: 100%;
+    text-align: left;
+  }
+
+
   .questions-container hr {
     margin-top: 1.2rem;
     margin-bottom: 1.2rem;
